287 decouple role from actor (#326)
* Removed the column actor_role_id and foreign key to Role table.

* Decouple Role from Actor #287.

* Decouple Role from HealthCareProfessional #317.

* Decouple Role from Patient #318.

* Decouple Role from HealthCareProfessional in BCIActivityInstance #319

* Decouple Role from HealthCareProfessional in BCIModuleInstance #320

* Decouple Role from HealthCareProfessional in BCIReferral #321

* Decouple Role from HealthCareProfessional in BehaviorChangeInterventionBlockInstance #322

* Decouple Role from HealthCareProfessional in BehaviorPerformanceInstance #323

* Decouple Role from HealthCareProfessional in GoalSettingInstance #324

* Decouple Role from HealthCareProfessional in Participant #325